--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -226,7 +226,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJC - PureEQ v1.2.2</span></h2>
+  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJC - PureEQ v1.3.0</span></h2>
   <h3>Steps</h3>
   <ol>
     <li class="smaller-font">Download and install the free room correction software Room EQ Wizard (v5.40 Beta) in your computer
@@ -819,15 +819,26 @@
       }
       return [loDelay, hiDelay];
     }
-    async function groundWorks() {
-      let measurements = await fetch_mREW();
-      const mCount = Object.keys(measurements).length;
-      if (bassMode === "Directional") {console.info(`'Directional bass' mode with '${swChannelCount}' subwoofers detected.`);}
-      if (bassMode != "Directional" && swChannelCount > 1) {console.info(`'Standard bass' mode with '${swChannelCount}' subwoofers detected.`);}
-      if (bassMode != "Directional" && swChannelCount === 1) {console.info(`'Standard bass' mode with '${swChannelCount}' subwoofer detected.`);}
-      console.log("Optimizing spatial averaging, volume & time alignment...");
-      console.info("Starting...");
-      console.infoUpdate("Time aligning speakers...");
+    async function initializeTrims() {
+      console.info("Initializing trims...");
+      for (let i = 1; i < commandId.length; i++) {
+        const indices = cmdIdMeasurements[commandId[i]];
+        // trim determination using the MLP measurement
+        if (commandId[i].startsWith("SW")) {
+          customLevel[i] = await getSubTrim(indices[0]);
+        }
+        else {
+          customLevel[i] = await getSpeakerTrim(indices[0]);
+        }
+        // shift all measurements for this channel based on trim
+        for (j = 0; j < indices.length; j++) {
+          await postNext('Add SPL offset', indices[j], { offset: customLevel[i] });
+        }
+      }
+      console.infoUpdate("Initializing trims...done!");
+    }
+    async function timeAlignSpeakers() {
+      console.info("Time aligning speakers...");
       const mlpSPIndices = [];
       const mlpSWIndices = [];
       for (let i = 1; i < commandId.length; i++) {
@@ -840,7 +851,7 @@
         mSec[i] = 0; // initialize
       }
       await postNext('Time align', mlpSPIndices);
-      measurements = await fetch_mREW();
+      const measurements = await fetch_mREW();
       // keep relative delays for time alignment & normalize speaker IRs to t=0
       let totalIRShift = 0;
       for (let i = 0; i < mlpSPIndices.length; i++) {
@@ -854,23 +865,20 @@
       for (let i = 0; i < mlpSWIndices.length; i++) {
         await postNext('Offset t=0', mlpSWIndices[i], {offset: IRStartDelay, unit: "seconds"});
       }
-      console.infoUpdate("Completed time alignment!");
-      let title = {};
+      console.infoUpdate("Time aligning speakers...done!");
+    }
+    async function spatialAverage() {
+      console.info("Spatially averaging...");
+      const measurements = await fetch_mREW();
+      const mCount = Object.keys(measurements).length;
+      const avgSWIndices = [];
       for (let i = 1; i < commandId.length; i++) {
         const indices = cmdIdMeasurements[commandId[i]];
         console.infoUpdate(`Spatially averaging channel ${commandId[i]} using ${indices.length} microphone position(s)...`);
         if (indices.length > 1) {
           await postNext('Cross corr align', indices);
         }
-        //mSec[i] = 0; // should be 0 but manual measurements have slight IR drift which the normalization takes care of
-        title[i] = commandId[i] + "o";
-        // trim determination using the MLP measurement
-        if (title[i].startsWith("SW")) {
-          customLevel[i] = await getSubTrim(indices[0]);
-        }
-        else {
-          customLevel[i] = await getSpeakerTrim(indices[0]);
-        }
+        const title = commandId[i] + "o";
         // attempt to fix android volume bug where measurements are off by multiples of +/-6dB
         if (isCirrusLogic && isAudy) {
           await fixVolBug(indices);
@@ -884,38 +892,72 @@
         }
         // the "o" measurement
         const idx = mCount + i;
-        await fetch_mREW(idx, 'PUT', { title: title[i] });
+        await fetch_mREW(idx, 'PUT', { title: title });
         // align "o" measurement to target curve
-        const volAdjust = title[i].startsWith("SW") ? await getSubTrim(idx) : await getSpeakerTrim(idx);
+        const volAdjust = title.startsWith("SW") ? await getSubTrim(idx) : await getSpeakerTrim(idx);
         await postNext('Add SPL offset', idx, { offset: volAdjust });
+        if (title.startsWith("SW")) {
+          avgSWIndices.push(idx);
+        }
       }
-      console.infoUpdate("Deleting processed measurements...");
-      for (let i = mCount; i >= 1; i--) {
+      // by this point levels and delays are sorted, just need to combine and level to target
+      if (bassMode === "Directional") {
+        console.infoUpdate("Generating combined response of directional subwoofers...");
+        const combinedSW = await postNext('Vector sum', avgSWIndices);
+        const combinedSWIdx = Object.keys(combinedSW.results)[0];
+        await fetch_mREW(combinedSWIdx, 'PUT', { title: "SW1o" });
+        const volAdjust = await getSubTrim(combinedSWIdx);
+        await postNext('Add SPL offset', combinedSWIdx, { offset: volAdjust });
+        for (let i = avgSWIndices.length - 1; i >= 0; i--) {
+          await postDelete(avgSWIndices[i]);
+        }
+      }
+      console.infoUpdate("Spatial averaging...done!");
+    }
+    async function groundWorks() {
+      const measurements = await fetch_mREW();
+      const mCount = Object.keys(measurements).length;
+      if (bassMode === "Directional") {console.info(`'Directional bass' mode with '${swChannelCount}' subwoofers detected.`);}
+      if (bassMode != "Directional" && swChannelCount > 1) {console.info(`'Standard bass' mode with '${swChannelCount}' subwoofers detected.`);}
+      if (bassMode != "Directional" && swChannelCount === 1) {console.info(`'Standard bass' mode with '${swChannelCount}' subwoofer detected.`);}
+      console.log("Optimizing spatial averaging, volume & time alignment...");
+      await initializeTrims();
+      await timeAlignSpeakers();
+      if (!noSub) {
+        if (bassMode === "Directional") {
+          console.warn("Your system will now be converted to 'standard bass' mode for a better sound experience...");
+          await directional2standard();
+          console.warn("Conversion from 'directional bass' mode to 'standard bass' mode completed.")
+        }
+        else {
+          // normalize standard bass subwoofer median IR to t=0
+          const IROffset = (subLoDelay + subHiDelay) / 2;
+          const stdSubMLPIdx = cmdIdMeasurements[commandId[nChannels]][0];
+          await postNext('Offset t=0', stdSubMLPIdx, {offset: IROffset, unit: "seconds"});
+          mSec[nChannels] -= IROffset;
+        }
+        // align combined subwoofer median IR to median IR of speakers
+        // note: this ensures min/max delays are negative/positive, otherwise REW crashes
+        const mlpSWIndices = [];
+        for (let i = 1; i < commandId.length; i++) {
+          if (commandId[i].startsWith("SW")) {
+            mlpSWIndices.push(cmdIdMeasurements[commandId[i]][0]);
+          }
+        }
+        const loSPDelay = Math.min(...mSec.slice(1, nSpeakers + 1));
+        const hiSPDelay = Math.max(...mSec.slice(1, nSpeakers + 1));
+        const medianSPDelay = (loSPDelay + hiSPDelay) / 2;
+        for (let i = 0; i < mlpSWIndices.length; i++) {
+          await postNext('Offset t=0', mlpSWIndices[i], {offset: -medianSPDelay, unit: "seconds"});
+          mSec[nSpeakers + i + 1] += medianSPDelay;
+        }
+      }
+      await spatialAverage();
+      console.info("Deleting processed measurements...");
+      for (let i = mCount; i > 0; i--) {
         await postDelete(i);
       }
       console.infoUpdate("Completed spatial averaging, volume & time alignment!");
-      // no need to go further without subwoofer
-      if (noSub) { return; }
-      if (bassMode === "Directional") {
-        console.warn("Your system will now be converted to 'standard bass' mode for a better sound experience...");
-        await directional2standard();
-        console.warn("Conversion from 'directional bass' mode to 'standard bass' mode completed.")
-      }
-      else {
-        // normalize standard bass subwoofer median IR to t=0
-        const IROffset = (subLoDelay + subHiDelay) / 2;
-        await postNext('Offset t=0', nChannels, {offset: IROffset, unit: "seconds"});
-        mSec[nChannels] -= IROffset;
-      }
-      // align final subwoofer median IR to median IR of speakers
-      // note: this ensures min/max delays are negative/positive, otherwise REW crashes
-      const loSPDelay = Math.min(...mSec.slice(1, nSpeakers + 1));
-      const hiSPDelay = Math.max(...mSec.slice(1, nSpeakers + 1));
-      const medianSPDelay = (loSPDelay + hiSPDelay) / 2;
-      await postNext('Offset t=0', nChannels, {offset: -medianSPDelay, unit: "seconds"});
-      for (let i = nSpeakers + 1; i <= nSpeakers + nSubs; i++) {
-        mSec[i] += medianSPDelay;
-      }
       // done with groundworks and log
       const [loDelay, hiDelay] = getDelayRangeOfFinalSub();
       console.info(`Available bass system volume adjustment range → { ${subLoTrim}dB : ${subHiTrim}dB }`);
@@ -1453,48 +1495,59 @@
       console.infoUpdate("Completed generating final outputs for all channels!");
     }
     async function directional2standard() {
-      let currSubIdx = nSpeakers + 1;
-      let cmdIds = commandId[currSubIdx];
-      let minDelay = 0, maxDelay = 0;
+      // isolate the MLP measurements
+      const swIndices = [];
+      for (let i = 1; i < commandId.length; i++) {
+        if (commandId[i].startsWith("SW")) {
+          swIndices.push(cmdIdMeasurements[commandId[i]][0]);
+        }
+      }
+      const measurements = await fetch_mREW();
+      const mCount = Object.keys(measurements).length;
+      let currSubIdx = swIndices[0];
+      let cmdIds = measurements[currSubIdx].title.slice(0, -1);
       let startFreq = Math.round(await getAbsLow3dBPointForSub(currSubIdx));
       let endFreq = Math.round(await getAbsHigh3dBPointForSub(currSubIdx));
-      for (let i = nSpeakers + 2; i <= nSpeakers + nSubs; i++) {
-        console.log(`Aligning ${commandId[i]} to ${cmdIds}...`);
-        startFreq = Math.min(startFreq, Math.round(await getAbsLow3dBPointForSub(i)));
-        endFreq = Math.max(endFreq, Math.round(await getAbsHigh3dBPointForSub(i)));
-        const [isPossible, requiredDelay, isInverted, sumIndex] = await alignMsub(currSubIdx, i, startFreq, endFreq);
+      for (let i = 1; i < swIndices.length; i++) {
+        const thisSubCmdId = measurements[swIndices[i]].title.slice(0, -1);
+        console.log(`Aligning ${thisSubCmdId} to ${cmdIds}...`);
+        startFreq = Math.min(startFreq, Math.round(await getAbsLow3dBPointForSub(swIndices[i])));
+        endFreq = Math.max(endFreq, Math.round(await getAbsHigh3dBPointForSub(swIndices[i])));
+        const [loDelay, hiDelay] = getDelayRangeOf(mSec[nSpeakers + i + 1], nSpeakers + 1, nSpeakers + nSubs);
+        const [isPossible, requiredDelay, isInverted, sumIndex] = await alignMsub(currSubIdx, swIndices[i],
+                                                                                  startFreq, endFreq, loDelay, hiDelay);
         if (!isPossible || !sumIndex) {
           console.error("Failed to align multiple subwoofers!");
           throw new Error;
         }
         currSubIdx = sumIndex;
-        mSec[i] += (requiredDelay / 1000);
+        mSec[nSpeakers + i + 1] += (requiredDelay / 1000);
         invertSub[i] = isInverted;
-        cmdIds += ` & ${commandId[i]}`;
-        minDelay = Math.min(minDelay, mSec[i]);
-        maxDelay = Math.max(maxDelay, mSec[i]);
+        cmdIds += ` & ${thisSubCmdId}`;
+        await postNext('Offset t=0', swIndices[i], {offset: -mSec[nSpeakers + i + 1], unit: "seconds"});
       }
-      for (let i = currSubIdx - 1; i > nSpeakers; i--) {
-        await postDelete(i);
+      // normalize median subwoofer delay to t=0
+      const loSWDelay = Math.min(...mSec.slice(nSpeakers + 1, nSpeakers + nSubs + 1));
+      const hiSWDelay = Math.max(...mSec.slice(nSpeakers + 1, nSpeakers + nSubs + 1));
+      const medianSWDelay = (loSWDelay + hiSWDelay) / 2;
+      for (let i = 0; i < swIndices.length; i++) {
+        await postNext('Offset t=0', swIndices[i], {offset: medianSWDelay, unit: "seconds"});
+        mSec[nSpeakers + i + 1] -= medianSWDelay;
       }
-      await fetch_mREW(nChannels, 'PUT', { title: "SW1o" });
-      // normalize directional bass subwoofer median IR to t=0
-      const IROffset = (minDelay + maxDelay) / 2;
-      await postNext('Offset t=0', nChannels, {offset: IROffset, unit: "seconds"});
-      for (let i = nSpeakers + 1; i <= nSpeakers + nSubs; i++) {
-        mSec[i] -= IROffset;
-      }
-      // offset volume from combining subwoofers
-      const volAdjust = await getSubTrim(nChannels);
-      if (volAdjust === 0) { return; } // nothing more to do
-      await postNext('Add SPL offset', nChannels, { offset: volAdjust });
       // newer AVRs that support directional already compensates for combined subwoofer volume and doesn't need adjustment
       if (sOs === 300) {
-        console.log(`Adjusting combined sub level by ${volAdjust}dB to best follow the target curve...`);
-        for (let i = nSpeakers + 1; i <= nSpeakers + nSubs; i++) {
-          customLevel[i] += volAdjust;
-          console.info(`${commandId[i].padStart(3, ".")} - shifted: ${customLevel[i] - volAdjust}dB → ${customLevel[i]}dB`);
+        const volAdjust = await getSubTrim(currSubIdx);
+        if (volAdjust != 0) {
+          console.log(`Adjusting combined sub level by ${volAdjust}dB to best follow the target curve...`);
+          for (let i = nSpeakers + 1; i <= nSpeakers + nSubs; i++) {
+            customLevel[i] += volAdjust;
+            console.info(`${commandId[i].padStart(3, ".")} - shifted: ${customLevel[i] - volAdjust}dB → ${customLevel[i]}dB`);
+          }
         }
+      }
+      // cleanup all potential alignments
+      for (let i = currSubIdx; i > mCount; i--) {
+        await postDelete(i);
       }
     }
     function response2array(response, start, end, phase=false) {
@@ -1626,8 +1679,7 @@
       }
       return [isPossible, requiredDelay, isInverted];
     }
-    async function alignMsub(ind1, ind2, start, end) {
-      const [loDelay, hiDelay] = getDelayRangeOf(mSec[ind2], nSpeakers + 1, nSpeakers + nSubs);
+    async function alignMsub(ind1, ind2, start, end, loDelay, hiDelay) {
       console.info(`Available delay range: ${loDelay.toFixed(2)}ms <-> ${hiDelay.toFixed(2)}ms`);
       let isInverted = false, isPossible = false, requiredDelay = NaN, bestFreq = NaN, maxSum = -Infinity, sumIndex = null;
       await postSafe("http://localhost:4735/alignment-tool/index-a", ind1, "selected as measurement A");
