--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -835,7 +835,7 @@
           await postNext('Add SPL offset', indices[j], { offset: customLevel[i] });
         }
       }
-      console.infoUpdate("Initializing trims...done!");
+      console.infoUpdate("Initialized trims.");
     }
     async function timeAlignSpeakers() {
       console.info("Time aligning speakers...");
@@ -865,16 +865,15 @@
       for (let i = 0; i < mlpSWIndices.length; i++) {
         await postNext('Offset t=0', mlpSWIndices[i], {offset: IRStartDelay, unit: "seconds"});
       }
-      console.infoUpdate("Time aligning speakers...done!");
+      console.infoUpdate("Time aligned speakers.");
     }
     async function spatialAverage() {
-      console.info("Spatially averaging...");
       const measurements = await fetch_mREW();
       const mCount = Object.keys(measurements).length;
       const avgSWIndices = [];
       for (let i = 1; i < commandId.length; i++) {
         const indices = cmdIdMeasurements[commandId[i]];
-        console.infoUpdate(`Spatially averaging channel ${commandId[i]} using ${indices.length} microphone position(s)...`);
+        console.info(`Spatially averaging channel ${commandId[i]} using ${indices.length} microphone position(s)...`);
         if (indices.length > 1) {
           await postNext('Cross corr align', indices);
         }
@@ -899,10 +898,11 @@
         if (title.startsWith("SW")) {
           avgSWIndices.push(idx);
         }
+        console.infoUpdate(`Spatially averaged channel ${commandId[i]} using ${indices.length} microphone position(s).`);
       }
       // by this point levels and delays are sorted, just need to combine and level to target
       if (bassMode === "Directional") {
-        console.infoUpdate("Generating combined response of directional subwoofers...");
+        console.info("Generating combined response of directional subwoofers...");
         for (let i = 0; i < avgSWIndices.length; i++) {
           if (invertSub[nSpeakers + i + 1]) {
             await postSafe(`${baseUrl}/${avgSWIndices[i]}/command`,{command: "Invert"}, "Invert completed");
@@ -916,8 +916,8 @@
         for (let i = avgSWIndices.length - 1; i >= 0; i--) {
           await postDelete(avgSWIndices[i]);
         }
+        console.infoUpdate("Generated combined response of directional subwoofers.");
       }
-      console.infoUpdate("Spatial averaging...done!");
     }
     async function groundWorks() {
       const measurements = await fetch_mREW();
