--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -1526,6 +1526,7 @@
           }
         }
       }
+      console.info(`Generating combined subwoofer response(s) for ${swIndices[0].length} microphone position(s)...`);
       // normalize median subwoofer delay to t=0
       const loSWDelay = Math.min(...mSec.slice(nSpeakers + 1, nSpeakers + nSubs + 1));
       const hiSWDelay = Math.max(...mSec.slice(nSpeakers + 1, nSpeakers + nSubs + 1));
@@ -1565,6 +1566,7 @@
           await postDelete(swIndices[i][j]);
         }
       }
+      console.infoUpdate(`Generated combined subwoofer response(s) and removed individual subwoofer response(s).`);
       // update measurement list per channel
       measurements = await fetch_mREW();
       mCount = Object.keys(measurements).length;
